# tree-sitter-lyr

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  flake.nix  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-lyr.pc.in
bindings/c/tree_sitter/: tree-sitter-lyr.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_lyr/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterLyrTests/: TreeSitterLyrTests.swift
queries/lyr/: folds.scm  highlights.scm  indents.scm  textobjects.scm
src/: grammar.json  node-types.json  parser.c
