[package]
name = "tree-sitter-lyr"
description = "CTB Girls' Dorm standardized lyrics file format"
version = "0.1.0"
authors = ["btmxh <ngoduyanh.chip@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "lyr"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/nrs-org/tree-sitter-lyr"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.8"
